--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.16",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "antd": "^5.2.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
