--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@fortawesome/fontawesome-free": "^6.3.0",
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
     "@fortawesome/free-brands-svg-icons": "^6.3.0",
+    "@fortawesome/free-regular-svg-icons": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.16",
     "@tailwindcss/line-clamp": "^0.4.2",
+    "@types/theme-ui": "^0.6.0",
     "antd": "^5.2.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -29,7 +31,8 @@
     "react-svg": "^16.1.2",
     "slick-carousel": "^1.8.1",
     "sort-by": "^1.2.0",
-    "swiper": "^9.1.0"
+    "swiper": "^9.1.0",
+    "theme-ui": "^0.15.5"
   },
   "devDependencies": {
     "@types/node": "^18.14.1",
