--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "moment": "^2.29.4",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-barcode": "^1.4.6",
     "react-dom": "^18.2.0",
