--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-router-dom": "^6.8.1",
     "react-slick": "^0.29.0",
     "react-svg": "^16.1.2",
+    "react-youtube": "^10.1.0",
     "slick-carousel": "^1.8.1",
     "sort-by": "^1.2.0",
     "swiper": "^9.1.0",
